--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "dependencies": {
     "dotenv": "^16.4.7",
     "ejs": "^3.1.10",
-    "express": "^4.21.2"
+    "express": "^4.21.2",
+    "jsdom": "^26.0.0",
+    "sanitize-html": "^2.14.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
